--- a/styles.css
+++ b/styles.css
@@ -51,3 +51,22 @@ button:hover{
     color: white;
     
 }
+@media only screen and (min-width: 200px) and (max-width: 932px){
+    label{
+        margin: auto;
+        margin-bottom: 10px;
+    }
+    input{
+        margin: auto;
+        margin-bottom: 10px;
+    }
+    .pokemon-info{
+        margin: auto;
+        margin-top: 50px;
+        max-width: 500px; 
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+    
+}
