--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ h1{
 }
 label{
     color: white;
+    font-weight: bold;
 }
 .container{
     text-align: center;
@@ -22,9 +23,21 @@ label{
     box-shadow: 0 0 10px rgb(0, 0, 0, 0.5);
     width: 70%;
     height: 80%;
+    position: relative;
+}
+img{
+    position: absolute;
+    bottom: 50px;
+    right: 50px;
+}
+.container3{
+    margin-bottom: 20px;
 }
 .container2{
-    margin-bottom: 20px;
+    background-color: rgb(204, 200, 200);
+    margin: 10px;
+    padding: 5px;
+
 }
 label{
     display: block;
@@ -59,6 +72,15 @@ button:hover{
     input{
         margin: auto;
         margin-bottom: 10px;
+    }
+    .container{
+        position: relative;
+    }
+    img{
+        position:absolute;
+        width: 150px;
+        bottom: 20px;
+        left: 160px;
     }
     .pokemon-info{
         margin: auto;
