--- a/styles.css
+++ b/styles.css
@@ -25,11 +25,15 @@ label{
     height: 80%;
     position: relative;
 }
-img{
-    position: absolute;
-    bottom: 50px;
-    right: 50px;
-}
+.D-pad{
+    position: absolute; 
+    max-width: 100%;
+    height: auto;
+    margin-top: 20px; 
+    margin-right: 30px;
+    bottom: 10px;
+    right: 1px; 
+} 
 .container3{
     margin-bottom: 20px;
 }
@@ -59,8 +63,9 @@ button:hover{
     background-color: #0056b3;
 }
 .pokemon-info{
-    margin-right: 50px;
-    margin-top: 50px;
+    margin: auto;
+    margin-right: 60px;
+    margin-top: 70px;
     color: white;
     
 }
@@ -76,15 +81,15 @@ button:hover{
     .container{
         position: relative;
     }
-    img{
+    .D-pad{
         position:absolute;
         width: 150px;
-        bottom: 20px;
-        left: 160px;
+        bottom: 1px;
+        left: 170px;
     }
     .pokemon-info{
         margin: auto;
-        margin-top: 50px;
+        margin-top: 20px;
         max-width: 500px; 
         white-space: nowrap;
         overflow: hidden;
